made slight change

--- a/html/index.html
+++ b/html/index.html
@@ -16,7 +16,7 @@
     <section class="introductory-section">
       <div>
         <nav class="navigation">
-          <h3>farouk.</h3>
+          <h3>FAROUK.</h3>
 
           <ul class="navigation-links">
             <li><a href="#section1">About</a></li>
@@ -101,8 +101,8 @@
       <br />
       <br />
 
+      <h1>Academic Honesty</h1>
       <section class="academic-honesty">
-        <h1>Academic Honesty</h1>
 
         <blockquote class="blockquote">
           I declare that my assessment is wholly my own work in accordance with
